# Term-Extractor-Project

./: .gitignore  pyproject.toml  requirements.txt  test_extract.py
app/: main.py
app/backend/: api.py  extraction_runner.py  file_utils.py
app/frontend/: index.html
app/frontend/css/: styles.css
app/frontend/js/: app.js
app/frontend/js/utils/: api.js  dom.js
app/frontend/js/views/: editor.js  progress.js  setup.js
term_extractor/: __init__.py  edit-terms.html  magic.py  model_lang_maps.py  nlp_lib.py
